Fixed spacing of Form

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,3 @@
     transform: rotate(360deg);
   }
 }
-
-.spacing {
-  margin: 35;
-}
